syntax = "proto3";
package dydxprotocol.clob;

import "gogoproto/gogo.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/clob/types";

// Defines the set of equity tiers to limit how many open orders
// a subaccount is allowed to have.
message EquityTierLimitConfiguration {
  // How many short term stateful orders are allowed per equity tier.
  // Specifying 0 values disables this limit.
  repeated EquityTierLimit short_term_order_equity_tiers = 1
      [ (gogoproto.nullable) = false ];
  // How many open stateful orders are allowed per equity tier.
  // Specifying 0 values disables this limit.
  repeated EquityTierLimit stateful_order_equity_tiers = 2
      [ (gogoproto.nullable) = false ];
}

// Defines an equity tier limit.
message EquityTierLimit {
  // The total net collateral in USDC quote quantums of equity required.
  bytes usd_tnc_required = 1 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4-chain/protocol/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];

  // What the limit is for `usd_tnc_required`.
  uint32 limit = 2;
}
